# Demo_Unit_Test

./: README.md  meson.build
.github/workflows/: Ci.yaml  ci.yml
include/: processing.c  processing.h  uart.h
src/: uart.c
test/: meson.build  test_addition.c  test_addition_runner.c  test_processing_and_send.c  test_processing_and_send_runner.c
